adds version playbooks and an initial submod migration

--- a/local.yml
+++ b/local.yml
@@ -2,4 +2,5 @@
 - include: vagrant-hack.yml
 - include: v1.2.2.5.yml
 - include: LDL-0.5.x.yml
+- include: LDL-0.6.x.yml
 - include: post-build-cleanup.yml
