configures adv-search with collection filter

--- a/LDL-0.6.0.yml
+++ b/LDL-0.6.0.yml
@@ -3,3 +3,4 @@
 - include: migrations/migration-2017010515.yml
 - include: migrations/migration-2017010608.yml
 - include: migrations/migration-2017010610.yml
+- include: migrations/migration-2017010414.yml
