adds new migration; updates branch playbook

--- a/LDL-0.6.1.yml
+++ b/LDL-0.6.1.yml
@@ -1,3 +1,6 @@
 ---
 - include: migrations/migration-2017010911.yml
 - include: migrations/migration-2017011110.yml
+- include: migrations/migration-2017011208.yml
+- include: migrations/migration-2017011716.yml
+- include: migrations/migration-2017011812.yml
