renames pre- and post- build files; adds sprint-specific branch playbook

--- a/local.yml
+++ b/local.yml
@@ -1,6 +1,4 @@
 ---
-- include: vagrant-hack.yml
-- include: v1.2.2.5.yml
-- include: LDL-0.5.x.yml
-- include: LDL-0.6.x.yml
-- include: post-build-cleanup.yml
+- include: pre-up.yml
+#- include: LDL-0.6.x.yml
+- include: post-up.yml
